Cloning Done without icons and two other Container

--- a/Blockchain.html
+++ b/Blockchain.html
@@ -24,13 +24,18 @@
 				<li><a href="#">Exchange</a></li>
 				<li><a href="#">Explorer</a></li>
 				<li><a href="#">Institutional</a></li>
-
+			</ul>
+			<ul>	
+				<li><a href="#" class="button2">LogIn</a>
+				</li>
+				<li>
+					<a href="#" class="button6">SignUp</a>	
+				</li>
 		    </ul>
 
 		</div>
 
-
-		<div class="block">
+<!--	<div class="block">
 
 			<div class="button2">	
 				<a href="#" class="button2">Log In</a>
@@ -40,7 +45,7 @@
 				<a href="#" class="button6">Sign Up</a>
 			</div>
 		</div>
-
+	-->
 		<br>
 		<br>	
 
@@ -49,7 +54,7 @@
 
 			<h3>Trusted by millions since 2011 with over $1 Trillion in crypto  <br> transactions.</h3>
 			<a href="#"  class="button4">Get Started</a>      <!--Get Started Button-->
-			<a href="#"  class="button5">Log In</a>
+			<a href="https://www.youtube.com/watch?v=kgx4WGK0oNU"  class="button5">Log In</a>
 		</div>
 
 	</div>
@@ -99,6 +104,107 @@
 			<a href="#"  class="button1">Get Started</a>
 		</div>
 	<!--Container2 ends here-->
+
+
+	<div class="Container3">
+
+		<div class="C3-box1">
+			<img src="images/box3.png" width="575px" height="575px">
+		</div>
+
+		<div class="C3-box2">
+			
+			<h1>Lightining-Fast Crypto Trading</h1>		
+			
+			<div class="P1">	
+				<h4>Trade in 3 fiat currencies</h4>
+				<p>The Exchange support USD, EUR, and GBP.</p>
+			</div>
+
+			<div class="p">	
+				<a href="#">A matching engine can keep up with you</a>	
+			</div>
+			
+			<div class="p">	
+				<a href="#">Control your founds with Private Key Wallet</a>	
+			</div>
+			
+			<div class="p">	
+				<a href="#">24/7 live chat support</a>	
+			</div>
+			
+			<div class="p">	
+				<a href="#">Margin Trading</a>	
+			</div>
+
+							
+		</div>
+
+	</div>
+	<br>
+
+	<div class="Container4">
+		<div class="T1">
+			<h1>From zero to crypto in minutes  <a href="#" class="button8">Get Started</a></h1>
+		</div>
+		
+	</div>
+
+	<div class="Container5">
+		<div class="end1">
+			<h3>Blockchain</h3>
+			<ul>
+				<li>twitter</li>
+				<li>Instragam</li>
+				<li>Medium</li>
+			</ul>
+		</div>
+
+		<div class="end2">
+			<h5>Products</h5>
+			<ul>
+				<li>Wallet</li>
+				<li>Exchange</li>
+				<li>Explorer</li>
+				<li>Institutional</li>
+				<li>Learn</li>
+				<li>Prices</li>
+				<li>Charts</li>
+				<li>NFT</li>
+			</ul>
+			
+		</div>
+
+
+		<div class="end3">
+			<h5>Resources</h5>
+			<ul>
+				<li>API's</li>
+				<li>Status</li>
+				<li>Open Source</li>
+				<li>Research</li>
+				<li>Legal Privacy</li>
+				<li>Wallet Support</li>
+				<li>Exchange Support</li>
+				<li>Blog</li>
+				<li>Security</li>
+				<li>Podcast</li>
+			</ul>	
+		</div>
+
+		<div class="end4">
+			<h5>Company</h5>
+			<ul>
+				<li>About</li>
+				<li>Carrers</li>
+				<li>Press Center</li>
+				<li>Prime</li>
+				<li>Venture</li>
+				<li>BCAM</li>
+			</ul>
+		</div>
+
+	</div>
 
 </body>
 </html>
